# diffquant

./: .gitignore  README.md  compare.py  evaluate.py  optimize.py  optimize_thresholds.py  pyproject.toml  requirements.txt  sanity_check.py  train.py
configs/: base_config.py
configs/experiments/: __init__.py  itransformer_hybrid.py  itransformer_sharpe.py  lstm_hybrid.py
data/: aggregator.py  dataset.py  features.py  normalization.py  pipeline.py  splitter.py
evaluation/: __init__.py  backtest.py  walk_forward.py
model/: __init__.py  policy_head.py  policy_network.py
model/backbone/: __init__.py  itransformer.py  lstm_encoder.py
sanity/: __init__.py  checks.py
simulator/: __init__.py  diff_simulator.py  losses.py
training/: __init__.py  trainer.py
utils/: __init__.py  logging_utils.py  metrics.py  utils.py  visualization.py
