# pyproject.toml
[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "diffquant"
version     = "0.1.0"
description = "End-to-end differentiable trading pipeline with direct PnL optimisation"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.8.0",
    "optuna>=3.6.0",
]

[tool.setuptools.packages.find]
where   = ["."]
include = [
    "data*", "model*", "simulator*",
    "training*", "evaluation*",
    "utils*", "sanity*", "configs*",
]

